ChefParser.js
// Generated from Chef.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var ChefListener = require('./ChefListener').ChefListener;
var grammarFileName = "Chef.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'the'", "'Ingredients.'", "'heaped'", "'level'", 
                     "'g'", "'kg'", "'pinch'", "'pinches'", "'ml'", "'l'", 
                     "'dash'", "'dashes'", "'cup'", "'cups'", "'teaspoon'", 
                     "'teaspoons'", "'tablespoon'", "'tablespoons'", "'Method.'", 
                     "'Take'", "'from refrigerator.'", "'Put'", "'into'", 
                     "'mixing bowl.'", "'Liquefy'", "'Liquify'", "'contents of'", 
                     "'Pour contents of'", "'mixing bowl into'", "'baking dish.'", 
                     "'st'", "'nd'", "'rd'", "'th'", "'Serves'", null, null, 
                     "'.'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      "WORD", "INT", "PERIOD", "NEWLINE", "WS" ];

var ruleNames =  [ "program", "title", "comments", "ingredients", "ingredient", 
                   "value", "measureType", "measure", "dryMeasure", "liquidMeasure", 
                   "unknownMeasure", "ingredientLabel", "method", "statement", 
                   "stdin", "put", "liquefy", "pour", "nth", "pth", "serves", 
                   "number", "divider" ];

function ChefParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

ChefParser.prototype = Object.create(antlr4.Parser.prototype);
ChefParser.prototype.constructor = ChefParser;

Object.defineProperty(ChefParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

ChefParser.EOF = antlr4.Token.EOF;
ChefParser.T__0 = 1;
ChefParser.T__1 = 2;
ChefParser.T__2 = 3;
ChefParser.T__3 = 4;
ChefParser.T__4 = 5;
ChefParser.T__5 = 6;
ChefParser.T__6 = 7;
ChefParser.T__7 = 8;
ChefParser.T__8 = 9;
ChefParser.T__9 = 10;
ChefParser.T__10 = 11;
ChefParser.T__11 = 12;
ChefParser.T__12 = 13;
ChefParser.T__13 = 14;
ChefParser.T__14 = 15;
ChefParser.T__15 = 16;
ChefParser.T__16 = 17;
ChefParser.T__17 = 18;
ChefParser.T__18 = 19;
ChefParser.T__19 = 20;
ChefParser.T__20 = 21;
ChefParser.T__21 = 22;
ChefParser.T__22 = 23;
ChefParser.T__23 = 24;
ChefParser.T__24 = 25;
ChefParser.T__25 = 26;
ChefParser.T__26 = 27;
ChefParser.T__27 = 28;
ChefParser.T__28 = 29;
ChefParser.T__29 = 30;
ChefParser.T__30 = 31;
ChefParser.T__31 = 32;
ChefParser.T__32 = 33;
ChefParser.T__33 = 34;
ChefParser.T__34 = 35;
ChefParser.WORD = 36;
ChefParser.INT = 37;
ChefParser.PERIOD = 38;
ChefParser.NEWLINE = 39;
ChefParser.WS = 40;

ChefParser.RULE_program = 0;
ChefParser.RULE_title = 1;
ChefParser.RULE_comments = 2;
ChefParser.RULE_ingredients = 3;
ChefParser.RULE_ingredient = 4;
ChefParser.RULE_value = 5;
ChefParser.RULE_measureType = 6;
ChefParser.RULE_measure = 7;
ChefParser.RULE_dryMeasure = 8;
ChefParser.RULE_liquidMeasure = 9;
ChefParser.RULE_unknownMeasure = 10;
ChefParser.RULE_ingredientLabel = 11;
ChefParser.RULE_method = 12;
ChefParser.RULE_statement = 13;
ChefParser.RULE_stdin = 14;
ChefParser.RULE_put = 15;
ChefParser.RULE_liquefy = 16;
ChefParser.RULE_pour = 17;
ChefParser.RULE_nth = 18;
ChefParser.RULE_pth = 19;
ChefParser.RULE_serves = 20;
ChefParser.RULE_number = 21;
ChefParser.RULE_divider = 22;

function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.title = function() {
    return this.getTypedRuleContext(TitleContext,0);
};

ProgramContext.prototype.ingredients = function() {
    return this.getTypedRuleContext(IngredientsContext,0);
};

ProgramContext.prototype.method = function() {
    return this.getTypedRuleContext(MethodContext,0);
};

ProgramContext.prototype.serves = function() {
    return this.getTypedRuleContext(ServesContext,0);
};

ProgramContext.prototype.NEWLINE = function() {
    return this.getToken(ChefParser.NEWLINE, 0);
};

ProgramContext.prototype.EOF = function() {
    return this.getToken(ChefParser.EOF, 0);
};

ProgramContext.prototype.comments = function() {
    return this.getTypedRuleContext(CommentsContext,0);
};

ProgramContext.prototype.program = function() {
    return this.getTypedRuleContext(ProgramContext,0);
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitProgram(this);
	}
};




ChefParser.ProgramContext = ProgramContext;

ChefParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, ChefParser.RULE_program);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 46;
        this.title();
        this.state = 48;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ChefParser.T__0 || _la===ChefParser.WORD || _la===ChefParser.PERIOD) {
            this.state = 47;
            this.comments();
        }

        this.state = 50;
        this.ingredients();
        this.state = 51;
        this.method();
        this.state = 52;
        this.serves();
        this.state = 54;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ChefParser.WORD) {
            this.state = 53;
            this.program();
        }

        this.state = 56;
        this.match(ChefParser.NEWLINE);
        this.state = 57;
        this.match(ChefParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TitleContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_title;
    return this;
}

TitleContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TitleContext.prototype.constructor = TitleContext;

TitleContext.prototype.PERIOD = function() {
    return this.getToken(ChefParser.PERIOD, 0);
};

TitleContext.prototype.divider = function() {
    return this.getTypedRuleContext(DividerContext,0);
};

TitleContext.prototype.WORD = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ChefParser.WORD);
    } else {
        return this.getToken(ChefParser.WORD, i);
    }
};


TitleContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterTitle(this);
	}
};

TitleContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitTitle(this);
	}
};




ChefParser.TitleContext = TitleContext;

ChefParser.prototype.title = function() {

    var localctx = new TitleContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, ChefParser.RULE_title);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 60; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 59;
            this.match(ChefParser.WORD);
            this.state = 62; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===ChefParser.WORD);
        this.state = 64;
        this.match(ChefParser.PERIOD);
        this.state = 65;
        this.divider();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function CommentsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_comments;
    return this;
}

CommentsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CommentsContext.prototype.constructor = CommentsContext;

CommentsContext.prototype.divider = function() {
    return this.getTypedRuleContext(DividerContext,0);
};

CommentsContext.prototype.WORD = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ChefParser.WORD);
    } else {
        return this.getToken(ChefParser.WORD, i);
    }
};


CommentsContext.prototype.PERIOD = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ChefParser.PERIOD);
    } else {
        return this.getToken(ChefParser.PERIOD, i);
    }
};


CommentsContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterComments(this);
	}
};

CommentsContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitComments(this);
	}
};




ChefParser.CommentsContext = CommentsContext;

ChefParser.prototype.comments = function() {

    var localctx = new CommentsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, ChefParser.RULE_comments);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 68; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 67;
            _la = this._input.LA(1);
            if(!(_la===ChefParser.T__0 || _la===ChefParser.WORD || _la===ChefParser.PERIOD)) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 70; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===ChefParser.T__0 || _la===ChefParser.WORD || _la===ChefParser.PERIOD);
        this.state = 72;
        this.divider();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IngredientsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_ingredients;
    return this;
}

IngredientsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IngredientsContext.prototype.constructor = IngredientsContext;

IngredientsContext.prototype.NEWLINE = function() {
    return this.getToken(ChefParser.NEWLINE, 0);
};

IngredientsContext.prototype.ingredient = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IngredientContext);
    } else {
        return this.getTypedRuleContext(IngredientContext,i);
    }
};

IngredientsContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterIngredients(this);
	}
};

IngredientsContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitIngredients(this);
	}
};




ChefParser.IngredientsContext = IngredientsContext;

ChefParser.prototype.ingredients = function() {

    var localctx = new IngredientsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, ChefParser.RULE_ingredients);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 74;
        this.match(ChefParser.T__1);
        this.state = 75;
        this.match(ChefParser.NEWLINE);
        this.state = 77; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 76;
            this.ingredient();
            this.state = 79; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ChefParser.T__2) | (1 << ChefParser.T__3) | (1 << ChefParser.T__4) | (1 << ChefParser.T__5) | (1 << ChefParser.T__6) | (1 << ChefParser.T__7) | (1 << ChefParser.T__8) | (1 << ChefParser.T__9) | (1 << ChefParser.T__10) | (1 << ChefParser.T__11) | (1 << ChefParser.T__12) | (1 << ChefParser.T__13) | (1 << ChefParser.T__14) | (1 << ChefParser.T__15) | (1 << ChefParser.T__16) | (1 << ChefParser.T__17))) !== 0) || _la===ChefParser.WORD || _la===ChefParser.INT);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IngredientContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_ingredient;
    return this;
}

IngredientContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IngredientContext.prototype.constructor = IngredientContext;

IngredientContext.prototype.ingredientLabel = function() {
    return this.getTypedRuleContext(IngredientLabelContext,0);
};

IngredientContext.prototype.NEWLINE = function() {
    return this.getToken(ChefParser.NEWLINE, 0);
};

IngredientContext.prototype.value = function() {
    return this.getTypedRuleContext(ValueContext,0);
};

IngredientContext.prototype.measureType = function() {
    return this.getTypedRuleContext(MeasureTypeContext,0);
};

IngredientContext.prototype.measure = function() {
    return this.getTypedRuleContext(MeasureContext,0);
};

IngredientContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterIngredient(this);
	}
};

IngredientContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitIngredient(this);
	}
};




ChefParser.IngredientContext = IngredientContext;

ChefParser.prototype.ingredient = function() {

    var localctx = new IngredientContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, ChefParser.RULE_ingredient);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 82;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ChefParser.INT) {
            this.state = 81;
            this.value();
        }

        this.state = 85;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ChefParser.T__2 || _la===ChefParser.T__3) {
            this.state = 84;
            this.measureType();
        }

        this.state = 88;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ChefParser.T__4) | (1 << ChefParser.T__5) | (1 << ChefParser.T__6) | (1 << ChefParser.T__7) | (1 << ChefParser.T__8) | (1 << ChefParser.T__9) | (1 << ChefParser.T__10) | (1 << ChefParser.T__11) | (1 << ChefParser.T__12) | (1 << ChefParser.T__13) | (1 << ChefParser.T__14) | (1 << ChefParser.T__15) | (1 << ChefParser.T__16) | (1 << ChefParser.T__17))) !== 0)) {
            this.state = 87;
            this.measure();
        }

        this.state = 90;
        this.ingredientLabel();
        this.state = 91;
        this.match(ChefParser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ValueContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_value;
    return this;
}

ValueContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ValueContext.prototype.constructor = ValueContext;

ValueContext.prototype.INT = function() {
    return this.getToken(ChefParser.INT, 0);
};

ValueContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterValue(this);
	}
};

ValueContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitValue(this);
	}
};




ChefParser.ValueContext = ValueContext;

ChefParser.prototype.value = function() {

    var localctx = new ValueContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, ChefParser.RULE_value);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 93;
        this.match(ChefParser.INT);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MeasureTypeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_measureType;
    return this;
}

MeasureTypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MeasureTypeContext.prototype.constructor = MeasureTypeContext;


MeasureTypeContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterMeasureType(this);
	}
};

MeasureTypeContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitMeasureType(this);
	}
};




ChefParser.MeasureTypeContext = MeasureTypeContext;

ChefParser.prototype.measureType = function() {

    var localctx = new MeasureTypeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, ChefParser.RULE_measureType);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 95;
        _la = this._input.LA(1);
        if(!(_la===ChefParser.T__2 || _la===ChefParser.T__3)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MeasureContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_measure;
    return this;
}

MeasureContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MeasureContext.prototype.constructor = MeasureContext;

MeasureContext.prototype.dryMeasure = function() {
    return this.getTypedRuleContext(DryMeasureContext,0);
};

MeasureContext.prototype.liquidMeasure = function() {
    return this.getTypedRuleContext(LiquidMeasureContext,0);
};

MeasureContext.prototype.unknownMeasure = function() {
    return this.getTypedRuleContext(UnknownMeasureContext,0);
};

MeasureContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterMeasure(this);
	}
};

MeasureContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitMeasure(this);
	}
};




ChefParser.MeasureContext = MeasureContext;

ChefParser.prototype.measure = function() {

    var localctx = new MeasureContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, ChefParser.RULE_measure);
    try {
        this.state = 100;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case ChefParser.T__4:
        case ChefParser.T__5:
        case ChefParser.T__6:
        case ChefParser.T__7:
            this.enterOuterAlt(localctx, 1);
            this.state = 97;
            this.dryMeasure();
            break;
        case ChefParser.T__8:
        case ChefParser.T__9:
        case ChefParser.T__10:
        case ChefParser.T__11:
            this.enterOuterAlt(localctx, 2);
            this.state = 98;
            this.liquidMeasure();
            break;
        case ChefParser.T__12:
        case ChefParser.T__13:
        case ChefParser.T__14:
        case ChefParser.T__15:
        case ChefParser.T__16:
        case ChefParser.T__17:
            this.enterOuterAlt(localctx, 3);
            this.state = 99;
            this.unknownMeasure();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DryMeasureContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_dryMeasure;
    return this;
}

DryMeasureContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DryMeasureContext.prototype.constructor = DryMeasureContext;


DryMeasureContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterDryMeasure(this);
	}
};

DryMeasureContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitDryMeasure(this);
	}
};




ChefParser.DryMeasureContext = DryMeasureContext;

ChefParser.prototype.dryMeasure = function() {

    var localctx = new DryMeasureContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, ChefParser.RULE_dryMeasure);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 102;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ChefParser.T__4) | (1 << ChefParser.T__5) | (1 << ChefParser.T__6) | (1 << ChefParser.T__7))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LiquidMeasureContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_liquidMeasure;
    return this;
}

LiquidMeasureContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LiquidMeasureContext.prototype.constructor = LiquidMeasureContext;


LiquidMeasureContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterLiquidMeasure(this);
	}
};

LiquidMeasureContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitLiquidMeasure(this);
	}
};




ChefParser.LiquidMeasureContext = LiquidMeasureContext;

ChefParser.prototype.liquidMeasure = function() {

    var localctx = new LiquidMeasureContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, ChefParser.RULE_liquidMeasure);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 104;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ChefParser.T__8) | (1 << ChefParser.T__9) | (1 << ChefParser.T__10) | (1 << ChefParser.T__11))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function UnknownMeasureContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_unknownMeasure;
    return this;
}

UnknownMeasureContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
UnknownMeasureContext.prototype.constructor = UnknownMeasureContext;


UnknownMeasureContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterUnknownMeasure(this);
	}
};

UnknownMeasureContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitUnknownMeasure(this);
	}
};




ChefParser.UnknownMeasureContext = UnknownMeasureContext;

ChefParser.prototype.unknownMeasure = function() {

    var localctx = new UnknownMeasureContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, ChefParser.RULE_unknownMeasure);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 106;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ChefParser.T__12) | (1 << ChefParser.T__13) | (1 << ChefParser.T__14) | (1 << ChefParser.T__15) | (1 << ChefParser.T__16) | (1 << ChefParser.T__17))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IngredientLabelContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_ingredientLabel;
    return this;
}

IngredientLabelContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IngredientLabelContext.prototype.constructor = IngredientLabelContext;

IngredientLabelContext.prototype.WORD = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ChefParser.WORD);
    } else {
        return this.getToken(ChefParser.WORD, i);
    }
};


IngredientLabelContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterIngredientLabel(this);
	}
};

IngredientLabelContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitIngredientLabel(this);
	}
};




ChefParser.IngredientLabelContext = IngredientLabelContext;

ChefParser.prototype.ingredientLabel = function() {

    var localctx = new IngredientLabelContext(this, this._ctx, this.state);
    this.enterRule(localctx, 22, ChefParser.RULE_ingredientLabel);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 109; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 108;
            this.match(ChefParser.WORD);
            this.state = 111; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===ChefParser.WORD);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MethodContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_method;
    return this;
}

MethodContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MethodContext.prototype.constructor = MethodContext;

MethodContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ChefParser.NEWLINE);
    } else {
        return this.getToken(ChefParser.NEWLINE, i);
    }
};


MethodContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

MethodContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterMethod(this);
	}
};
